tests/broken/for-no-ident.stderr
error: Expected 'in'
 --> tests/broken/for-no-ident.rs:4:33
  |
4 | #[oxiplate_inline = "{%- for in numbers -%}No ident present{% endfor %}"]
  |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
